--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -15,6 +15,13 @@ set $mod Mod1
 # is used in the bar {} block below.
 font pango:monospace 8
 
+# GET DEM BORDERS OUT OF HEREc:w
+#
+# Thanks Childz
+for_window [class="^.*"] border pixel 2
+                          # class                 border  backgr. text    indicator child_border
+for_window [class="^.*"] client.focused          #77dd77 #285577 #ffffff #2e9ef4   #285577
+
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
@@ -47,11 +54,11 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+# bindsym $mod+d exec dmenu_run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
 bindsym $mod+h focus left
@@ -78,7 +85,7 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+h split h
+bindsym $mod+z split h
 
 # split in vertical orientation
 bindsym $mod+v split v
@@ -177,5 +184,14 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        status_command i3status -c $HOME/.config/i3/.i3status.conf
+        tray_output primary
 }
+
+# Custom keys
+exec_always pa-applet
+
+# Audio controls
+bindsym $mod+Ctrl+9  exec amixer -D pulse set Master 3%-
+bindsym $mod+Ctrl+0  exec amixer -D pulse set Master 3%+
+bindsym $mod+Shift+m exec amixer -D pulse sset Master toggle
