add coc and ignore node_modules in telescope

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,3 +19,7 @@ bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r l select-pane -R
 bind -r h select-pane -L
+
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
