change prefix key in tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,8 +1,8 @@
 set -ga terminal-overrides ",xterm-256color*:Tc"
 
 unbind C-b
-set-option -g prefix C-o
-bind-key C-o send-prefix
+set-option -g prefix C-n
+bind-key C-n send-prefix
 set -g status-style 'bg=#333333 fg=#5eacd3'
 
 bind r source-file ~/.tmux.conf
@@ -22,4 +22,4 @@ bind -r h select-pane -L
 
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
