--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,7 +3,7 @@ set -ga terminal-overrides ",xterm-256color*:Tc"
 unbind C-b
 set-option -g prefix C-n
 bind-key C-n send-prefix
-set -g status-style 'bg=#333333 fg=#5eacd3'
+# set -g status-style 'bg=#333333 fg=#5eacd3'
 
 bind r source-file ~/.tmux.conf
 set -g base-index 1
@@ -23,3 +23,13 @@ bind -r h select-pane -L
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
+
+# resize panel
+bind -r S-UP resize-pane -U 5
+bind -r S-DOWN resize-pane -D 5
+bind -r S-LEFT resize-pane -L 5
+bind -r S-RIGHT resize-pane -R 5
+
+# imports
+source "~/.config/tmux/statusline.conf"
+source "~/.config/tmux/utility.conf"
