add new configs

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -33,3 +33,8 @@ bind -r S-RIGHT resize-pane -R 5
 # imports
 source "~/.config/tmux/statusline.conf"
 source "~/.config/tmux/utility.conf"
+
+# Undercurl
+set -g default-terminal "${TERM}"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
