add new configs

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,7 +5,7 @@ set-option -g prefix C-n
 bind-key C-n send-prefix
 # set -g status-style 'bg=#333333 fg=#5eacd3'
 
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf
 set -g base-index 1
 
 set-window-option -g mode-keys vi
@@ -29,6 +29,10 @@ bind -r S-UP resize-pane -U 5
 bind -r S-DOWN resize-pane -D 5
 bind -r S-LEFT resize-pane -L 5
 bind -r S-RIGHT resize-pane -R 5
+
+# Clear terminal
+# bind -n C-y send-keys -R \; clear-history
+bind m send-keys -R \; clear-history
 
 # imports
 source "~/.config/tmux/statusline.conf"
