--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,11 @@
-set -ga terminal-overrides ",xterm-256color*:Tc"
-
 unbind C-b
+# set -g default-terminal "${TERM}"
+# set -g default-terminal "tmux-256color"
+
+# set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+# set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+set -ag terminal-overrides ",xterm-256color:RGB"
+
 set-option -g prefix C-n
 bind-key C-n send-prefix
 # set -g status-style 'bg=#333333 fg=#5eacd3'
@@ -38,7 +43,3 @@ bind m send-keys -R \; clear-history
 source "~/.config/tmux/statusline.conf"
 source "~/.config/tmux/utility.conf"
 
-# Undercurl
-set -g default-terminal "${TERM}"
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
