--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,9 +1,9 @@
 # set -g default-terminal "${TERM}"
 # set -g default-terminal "tmux-256color"
 
-# set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
-# set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
-# set -ag terminal-overrides ",xterm-256color:RGB"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+set -ag terminal-overrides ",xterm-256color:RGB"
 
 unbind C-b
 set-option -g prefix C-n
@@ -12,6 +12,9 @@ bind-key C-n send-prefix
 
 bind r source-file ~/.config/tmux/tmux.conf
 set -g base-index 1
+
+set -sg escape-time 10
+set -g focus-events on
 
 set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
