Change tmux leading text

--- a/tmux/statusline.conf
+++ b/tmux/statusline.conf
@@ -21,7 +21,8 @@ set -g status-right-length "100"
 set -g status-left-style NONE
 set -g status-right-style NONE
 
-set -g status-left "#[fg=color251,bg=color1] #S #[fg=color1,bg=color251,nobold,nounderscore,noitalics]#[fg=color25,bg=color251] #(whoami) #[fg=color251,bg=color235,nobold,nounderscore,noitalics]#[fg=color121,bg=color235]"
+                                                                                                                          # #(whoami)
+set -g status-left "#[fg=color251,bg=color1] #S #[fg=color1,bg=color251,nobold,nounderscore,noitalics]#[fg=color25,bg=color251] ⚡#[fg=color251,bg=color235,nobold,nounderscore,noitalics]#[fg=color121,bg=color235]"
 set -g status-right '#[fg=color255, bg=color235] #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) #[fg=color15,bg=color166] %A, %d %b %Y %I:%M %p '
 
 setw -g window-status-separator ""
