--- a/tmux/statusline.conf
+++ b/tmux/statusline.conf
@@ -21,13 +21,18 @@ set -g status-right-length "100"
 set -g status-left-style NONE
 set -g status-right-style NONE
 
+
+Icon=
+IconOutline=
+Icon2=
                                                                                                                           # #(whoami)
-set -g status-left "#[fg=color251,bg=color1] #S #[fg=color1,bg=color251,nobold,nounderscore,noitalics]#[fg=color25,bg=color251] ⚡#[fg=color251,bg=color235,nobold,nounderscore,noitalics]#[fg=color121,bg=color235]"
-set -g status-right '#[fg=color255, bg=color235] #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) #[fg=color15,bg=color166] %A, %d %b %Y %I:%M %p '
+set -g status-left "#[fg=color251,bg=color1] #S #[fg=color1,bg=color251,nobold,nounderscore,noitalics]$Icon#[fg=color25,bg=color251] ⚡#[fg=color251,bg=color235,nobold,nounderscore,noitalics]$Icon#[fg=color121,bg=color235]"
+set -g status-right "#[fg=color255, bg=color235] #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)#[fg=color166,bg=color235] $Icon2#[fg=color15,bg=color166] %A, %d %b %Y %I:%M %p "
+#   
 
 setw -g window-status-separator ""
 setw -g window-status-style "NONE,fg=color25,bg=color235"
-setw -g window-status-format '#[fg=color243,bg=color235] #I  #{b:pane_current_path} '
-setw -g window-status-current-format '#[fg=color235,bg=color255,nobold,nounderscore,noitalics]#[fg=color24,bg=color255] #I #[fg=color255,bg=color24,nobold,nounderscore,noitalics]#[fg=color255,bg=color24] #{b:pane_current_path} #[fg=color24,bg=color235,nobold,nounderscore,noitalics]'
+setw -g window-status-format "#[fg=color243,bg=color235] #I $IconOutline #{b:pane_current_path} "
+setw -g window-status-current-format "#[fg=color235,bg=color255,nobold,nounderscore,noitalics]$Icon#[fg=color24,bg=color255] #I #[fg=color255,bg=color24,nobold,nounderscore,noitalics]$Icon#[fg=color255,bg=color24] #{b:pane_current_path} #[fg=color24,bg=color235,nobold,nounderscore,noitalics]$Icon"
 
 # Color Palette - https://www.ditig.com/256-colors-cheat-sheet
