Change tmux statusline style

--- a/tmux/statusline.conf
+++ b/tmux/statusline.conf
@@ -4,7 +4,16 @@
 # set -g message-style "fg=#eee8d5,bg=#073642"
 # set -g message-command-style "fg=#eee8d5,bg=#073642"
 
-set -g pane-border-style "fg=#073642"
+BgColor=#1a1b26
+Primary=#E95678
+Secondary=color24
+
+Icon=
+IconOutline=
+Icon2=
+#   
+
+set -g pane-border-style "fg=$BgColor"
 set -g pane-active-border-style "fg=#eee8d5"
 
 set -g status "on"
@@ -13,7 +22,7 @@ set -g status-justify "left"
 
 set -g status-style "fg=#586e75,bg=#073642"
 
-set -g status-bg "color235"
+set -g status-bg $BgColor
 
 set -g status-left-length "100"
 set -g status-right-length "100"
@@ -22,17 +31,15 @@ set -g status-left-style NONE
 set -g status-right-style NONE
 
 
-Icon=
-IconOutline=
-Icon2=
-                                                                                                                          # #(whoami)
-set -g status-left "#[fg=color251,bg=color1] #S #[fg=color1,bg=color251,nobold,nounderscore,noitalics]$Icon#[fg=color25,bg=color251] ⚡#[fg=color251,bg=color235,nobold,nounderscore,noitalics]$Icon#[fg=color121,bg=color235]"
-set -g status-right "#[fg=color255, bg=color235] #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)#[fg=color166,bg=color235] $Icon2#[fg=color15,bg=color166] %A, %d %b %Y %I:%M %p "
-#   
+                                              #S
+set -g status-left "#[fg=color255,bg=$Primary]  #[fg=$Primary,bg=color255]$Icon#[fg=color25,bg=color255] ⚡#[fg=color255,bg=$BgColor]$Icon"
+set -g status-right "#[fg=color243, bg=$BgColor] #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)#[fg=$Primary,bg=$BgColor] $Icon2#[fg=color16,bg=$Primary,bold] %I:%M %p "
+# %A, %d %b %Y %I:%M %p 
 
 setw -g window-status-separator ""
-setw -g window-status-style "NONE,fg=color25,bg=color235"
-setw -g window-status-format "#[fg=color243,bg=color235] #I $IconOutline #{b:pane_current_path} "
-setw -g window-status-current-format "#[fg=color235,bg=color255,nobold,nounderscore,noitalics]$Icon#[fg=color24,bg=color255] #I #[fg=color255,bg=color24,nobold,nounderscore,noitalics]$Icon#[fg=color255,bg=color24] #{b:pane_current_path} #[fg=color24,bg=color235,nobold,nounderscore,noitalics]$Icon"
+setw -g window-status-style "NONE,fg=color25,bg=$BgColor"
+setw -g window-status-format " #[fg=color243,bg=$BgColor] #I $IconOutline #{b:pane_current_path} "
+setw -g window-status-current-format "#[fg=$BgColor,bg=color255]$Icon#[fg=color24,bg=color255] #I #[fg=color255,bg=$Secondary]$Icon#[fg=color255,bg=$Secondary] #{b:pane_current_path} #[fg=$Secondary,bg=$BgColor]$Icon"
 
+# ,nobold,nounderscore,noitalics
 # Color Palette - https://www.ditig.com/256-colors-cheat-sheet
