Change status line style

--- a/tmux/statusline.conf
+++ b/tmux/statusline.conf
@@ -30,9 +30,8 @@ set -g status-right-length "100"
 set -g status-left-style NONE
 set -g status-right-style NONE
 
-
                                               #S
-set -g status-left "#[fg=color255,bg=$Primary]  #[fg=$Primary,bg=color255]$Icon#[fg=color25,bg=color255] ⚡#[fg=color255,bg=$BgColor]$Icon"
+set -g status-left "#[fg=color255,bg=$Primary] #S #[fg=$Primary,bg=$BgColor]"
 set -g status-right "#[fg=color243, bg=$BgColor] #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)#[fg=$Primary,bg=$BgColor] $Icon2#[fg=color16,bg=$Primary,bold] %I:%M %p "
 # %A, %d %b %Y %I:%M %p 
 
