--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -19,8 +19,8 @@ window:
     y: 0
 
   # Spread additional padding evenly around the terminal content.
-  dynamic_padding: false
-  opacity: 0.9
+  dynamic_padding: true
+  # opacity: 0.9
 
   # Window decorations
   #
@@ -31,7 +31,7 @@ window:
   # Values for `decorations` (macOS only):
   #     - transparent: Title bar, transparent background and title bar buttons
   #     - buttonless: Title bar, transparent background, but no title bar buttons
-  decorations: full
+  # decorations: full
 
   # When true, alacritty starts maximized.
   start_maximized: true
