--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,6 +1,12 @@
 env:
   TERM: xterm-256color
 
+import:
+  # uncomment the flavour you want below:
+  - ~/.config/alacritty/catppuccin/catppuccin-mocha.yml
+  #  - ~/.config/alacritty/catppuccin/catppuccin-macchiato.yml
+  # - ~/.config/alacritty/catppuccin/catppuccin-frappe.yml
+  # - ~/.config/alacritty/catppuccin/catppuccin-latte.yml
 window:
   # Window dimensions (changes require restart)
   #
@@ -61,30 +67,30 @@ font:
   # Point size
   size: 12.0
 
-# Tokyo Night Dark
-colors:
-  primary:
-    background: '0x1a1b26'
-    foreground: '0xa9b1d6'
-
-  # Normal colors
-  normal:
-    black: '0x32344a'
-    red: '0xf7768e'
-    green: '0x9ece6a'
-    yellow: '0xe0af68'
-    blue: '0x7aa2f7'
-    magenta: '0xad8ee6'
-    cyan: '0x449dab'
-    white: '0x787c99'
-
-  # Bright colors
-  bright:
-    black: '0x444b6a'
-    red: '0xff7a93'
-    green: '0xb9f27c'
-    yellow: '0xff9e64'
-    blue: '0x7da6ff'
-    magenta: '0xbb9af7'
-    cyan: '0x0db9d7'
-    white: '0xacb0d0'
+# # Tokyo Night Dark
+# colors:
+#   primary:
+#     background: '0x1a1b26'
+#     foreground: '0xa9b1d6'
+#
+#   # Normal colors
+#   normal:
+#     black: '0x32344a'
+#     red: '0xf7768e'
+#     green: '0x9ece6a'
+#     yellow: '0xe0af68'
+#     blue: '0x7aa2f7'
+#     magenta: '0xad8ee6'
+#     cyan: '0x449dab'
+#     white: '0x787c99'
+#
+#   # Bright colors
+#   bright:
+#     black: '0x444b6a'
+#     red: '0xff7a93'
+#     green: '0xb9f27c'
+#     yellow: '0xff9e64'
+#     blue: '0x7da6ff'
+#     magenta: '0xbb9af7'
+#     cyan: '0x0db9d7'
+#     white: '0xacb0d0'
