Change tmux color scheme

--- a/tmux/statusline.conf
+++ b/tmux/statusline.conf
@@ -4,9 +4,9 @@
 # set -g message-style "fg=#eee8d5,bg=#073642"
 # set -g message-command-style "fg=#eee8d5,bg=#073642"
 
-BgColor=#1a1b26
-Primary=#E95678
-Secondary=color24
+BgColor=#24273a
+Primary=#8aadf4
+Secondary=#c6a0f6
 
 Icon=
 IconOutline=
@@ -32,7 +32,7 @@ set -g status-right-style NONE
 
                                               #S
 set -g status-left "#[fg=color255,bg=$Primary] #S #[fg=$Primary,bg=$BgColor]"
-set -g status-right "#[fg=color243, bg=$BgColor] #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)#[fg=$Primary,bg=$BgColor] $Icon2#[fg=color16,bg=$Primary,bold] %I:%M %p "
+set -g status-right "#[fg=color243, bg=$BgColor] #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)#[fg=$Primary,bg=$BgColor] $Icon2#[fg=color255,bg=$Primary,bold] %I:%M %p "
 # %A, %d %b %Y %I:%M %p 
 
 setw -g window-status-separator ""
