--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,6 +6,8 @@ bold_italic_font auto
 
 font_size 13
 
+disable_ligatures always
+
 # THEME
 # see more themes at https://github.com/catppuccin/kitty
 # vim:ft=kitty
