Set default shell to zsh

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,6 +7,7 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 
 unbind C-b
 set-option -g prefix C-n
+set-option -g default-shell /usr/bin/zsh
 bind-key C-n send-prefix
 # set -g status-style 'bg=#333333 fg=#5eacd3'
 
