Use local config

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,9 +4,10 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-font_size 13
-
 disable_ligatures always
+enable_audio_bell no
+
+include local.conf
 
 # THEME
 # see more themes at https://github.com/catppuccin/kitty
