Remap caplock and ctrl+[

--- a/keyd/default.conf
+++ b/keyd/default.conf
@@ -4,6 +4,7 @@
 
 [main]
 
+capslock = layer(capslock_layer)
 leftalt = layer(leftalt_layer)
 
 [leftalt_layer:A]
@@ -12,3 +13,7 @@ h = left
 j = down
 k = up
 l = right
+
+[capslock_layer:C]
+
+[ = esc
