--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,7 +7,7 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 
 unbind C-b
 set-option -g prefix C-n
-set-option -g default-shell /usr/bin/zsh
+
 bind-key C-n send-prefix
 # set -g status-style 'bg=#333333 fg=#5eacd3'
 
@@ -47,3 +47,5 @@ bind m send-keys -R \; clear-history
 source "~/.config/tmux/statusline.conf"
 source "~/.config/tmux/utility.conf"
 
+# source local.conf if it exists
+if-shell "test -f ~/.config/tmux/local.conf" "source ~/.config/tmux/local.conf"
