Init configs for yabai aerospace sketchybar skhd

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -42,6 +42,8 @@ bell_border_color       #EED49F
 wayland_titlebar_color system
 macos_titlebar_color system
 
+hide_window_decorations yes
+
 # Tab bar colors
 active_tab_foreground   #181926
 active_tab_background   #C6A0F6
